Add PWA support, logout button, and APK guide

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
+    <meta name="theme-color" content="#1e293b" />
+    <meta name="description" content="Track your gym workouts and progress" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
     <title>Gym Logbook</title>
   </head>
   <body>
